# scil

./: .atom-build.json  .gitignore  .travis.yml  DEPENDENCIES.txt  README.md  configure  sigbits.patch  test2D_1var.nc
scil/code/: CMakeLists.txt  algo-1.c  create-datatype-variants.sh  main.c  scil-dtypes.h.dtype  scil-internal.h  scil-util.c  scil-util.h  scil.c  scil.h  util.c
scil/code/algo/: algo-1-init.c.x  algo-1-initializer.c  algo-1-test.c  algo-1.c  algo-1.c.dtype  algo-1.h  algo-1.h.dtype  algo-2-init.c.x  algo-2-initializer.c  algo-2.c  algo-2.c.dtype  algo-2.h  algo-2.h.dtype  algo-abstol.c.dtype  algo-abstol.h.dtype  algo-fpzip-helperr.c.x  algo-fpzip-init.c.x  algo-fpzip.c  algo-fpzip.c.dtype  algo-fpzip.h  algo-fpzip.h.dtype  algo-gzip.c  algo-gzip.h  algo-memcopy.c  algo-memcopy.h  algo-sigbits-init.c.x  algo-sigbits.c.dtype  algo-sigbits.h.dtype  algo-zfp-abstol-init.c.x  algo-zfp-abstol.h.dtype  algo-zfp-init.c.x  algo-zfp-precision-init.c.x  algo-zfp.c.dtype  algo-zfp.h.dtype  gzalgo-1.c  gzalgo-1.h  gzip.c  gzip.h  memcopy.c  memcopy.h
scil/code/plotter/: performance_data_0.00_0.25.csv  performance_data_0.00_1.00.csv  plotter.py
scil/code/test/: CMakeLists.txt  algo-1-test.c  compression-test.c  performance-test.c  zlib-test.c
src/: .clang-format  CMakeLists.txt  Doxyfile.in  configure  create-datatype-variants.sh  scil-algo-chooser.c  scil-algo-chooser.h  scil-config.h.in  scil-dict.c  scil-dict.h  scil-dtypes-int.dtype.h  scil-dtypes-int.h.dtype  scil-dtypes.dtype.h  scil-dtypes.h.dtype  scil-errors.c  scil-errors.h  scil-hardware-limits.c  scil-hardware-limits.h  scil-internal.h  scil-option.c  scil-option.h  scil-packer.c  scil-packer.h  scil-quantizer.c  scil-quantizer.c.dtype  scil-quantizer.dtype.c  scil-quantizer.dtype.h  scil-quantizer.h  scil-quantizer.h.dtype  scil-swager.c  scil-swager.h  scil-util.c  scil-util.h  scil.c  scil.h  symbols-scil.txt  symbols.map  symbols.txt
src/algo/: algo-abstol-init.c.x  algo-abstol.c.dtype  algo-abstol.dtype.c  algo-abstol.h.dtype  algo-allquant.dtype.c  algo-allquant.dtype.h  algo-fpzip.c.dtype  algo-fpzip.dtype.h  algo-fpzip.h.dtype  algo-gzip.c  algo-gzip.h  algo-memcopy.c  algo-memcopy.h  algo-opj-init.c.x  algo-opj.c  algo-opj.c.dtype  algo-opj.h  algo-opj.h.dtype  algo-quantize.c.dtype  algo-quantize.dtype.c  algo-quantize.h.dtype  algo-sigbits-init.c.x  algo-sigbits.c.dtype  algo-sigbits.dtype.c  algo-sigbits.h.dtype  algo-swage.c.dtype  algo-swage.dtype.c  algo-swage.dtype.h  algo-swage.h.dtype  algo-sz.dtype.c  algo-sz.dtype.h  algo-wavelets.c.dtype  algo-wavelets.h.dtype  algo-zfp-abstol-init.c.x  algo-zfp-abstol.c.dtype  algo-zfp-abstol.dtype.c  algo-zfp-abstol.h.dtype  algo-zfp-precision-init.c.x  algo-zfp-precision.c.dtype  algo-zfp-precision.dtype.c  (+12 more)
src/base/: scil-dims.c  scil-dims.h  scil-user-hints.c  scil-user-hints.h
src/bench/: benchmark.c
src/compression/: CMakeLists.txt  scil-algo-chooser.c  scil-algo-chooser.h  scil-cca.h  scil-chain-execution.c  scil-chain-execution.h  scil-chain.c  scil-compression-algorithm.c  scil-compression-algorithm.h  scil-compression-chain.c  scil-compression-chain.h  scil-compression.c  scil-compression.h  scil-compressor.c  scil-compressor.h  scil-context-impl.h  scil-context.c  scil-context.h  scil-data-characteristics.c  scil-decision-tree.c  scil-dtypes-functions-int.dtype.h  scil.c  scil.h
src/compression/algo/: algo-abstol.dtype.c  algo-abstol.dtype.h  algo-allquant.dtype.c  algo-allquant.dtype.h  algo-fpzip.dtype.c  algo-fpzip.dtype.h  algo-gzip.c  algo-gzip.h  algo-memcopy.h  algo-quantize.dtype.c  algo-quantize.dtype.h  algo-sigbits.dtype.c  algo-sigbits.dtype.h  algo-swage.dtype.c  algo-swage.dtype.h  algo-sz.dtype.h  algo-wavelets.dtype.h  algo-zfp-abstol.dtype.c  algo-zfp-abstol.dtype.h  (+13 more)
src/core/: CMakeLists.txt  scil-dims.c
src/file-formats/: CMakeLists.txt  file-bin.c  file-bin.h  file-brick-of-floats.c  file-brick-of-floats.h  file-csv.c  file-csv.h  file-netcdf.h  file-plugin.c
src/internal/: scil-algorithm.c  scil-algorithm.h  scil-algos.c  scil-algos.h  scil-cca.h  scil-chain.c  scil-chain.h  scil-compression-algorithm.c  scil-compression-algorithm.h  scil-compression-chain.c  scil-compression-chain.h  scil-data-characteristics.c  scil-data-characteristics.h  scil-datatypes.c  scil-datatypes.h  scil-dict.c  scil-dict.h  scil-hardware-limits.c  scil-hardware-limits.h  scil-internal.h
src/pattern/: CMakeLists.txt  basic-mutators.c  basic-mutators.h  basic-patterns.c  basic-patterns.h  scil-pattern-internal.h  scil-patterns.c  scil-patterns.h  simplex-noise.c  simplex-noise.h
src/plotter/: performance_data_0.00_0.00.csv  performance_data_0.00_0.50.csv  performance_data_0.00_0.75.csv
src/prepare/: scil-context.c  scil-context.h  scil-dims.c  scil-dims.h  scil-prepare.h  scil-user-hints.c  scil-user-hints.h
src/test/: CMakeLists.txt  abstol-boundary-error.c  abstol-too-precise-double.c  abstol-too-precise-float.c  abstol-too-precise.c  abstol.c  allquant.c  bit-mapping.c  compression-chain.c  compression-test.c  compression.c  correctness-test.c  correctness.c  datatypes.c  dict.c  empty.c  huffman.c  nd-iter.c  opj-basic.c  opj-int16.c  opj-int8.c  opj.c  pack.c  performance-test.c  performance.c  precision-set.c  precision.c  precond.c  quantize-algo.c  quantize.c  reltol-extreme-values-double.c  reltol.c  set-precision.c  sigbits-extreme-values-double.c  sigbits-extreme-values-float.c  sigbits-known-values-2bit.c  sigbits-known-values-3bit.c  sigbits-known-values-4bit.c  sigbits-known-values-double.c  sigbits-known-values-float.c  (+9 more)
src/tools/: CMakeLists.txt  scil-add-noise.c  scil-benchmark.c  scil-compress-csv.c  scil-compress.c  scil-gen-chooser-data.c  scil-generate-chooser-data.c  scil-generate-chooser-data2.c  scil-pattern-creator.c  scil-pattern-plotter.c  scil-plot-csv.R
src/util/: CMakeLists.txt  scil-compressors.c  scil-compressors.h  scil-dict.c  scil-error.c  scil-error.h  scil-hardware-limits.c  scil-hardware-limits.h  scil-option.c  scil-util-types.dtype.c  scil-util-types.dtype.h  scil-util.c  scil-util.h
(+135 files in other folders)
